fixed typo swagger users
